--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,7 +11,7 @@ phases:
   pre_build:
     commands:
       - echo Entered the pre_build phase...
-      - docker login -u "manya97" -p "manya@docker"
+      - docker login -u "umang2608" -p "Umang@123"
     finally:
       - echo This always runs even if the login command fails
   build:
@@ -26,5 +26,5 @@ phases:
       - echo Entered the post_build phase...
       - dotnet publish -o ./PublishOutput
       - docker build -t dotnetbuild:1 .
-      - docker tag dotnetbuild:1 manya97/dotnetbuild:1 
-      - docker push manya97/dotnetbuild:1
+      - docker tag dotnetbuild:1 umang2608/dotnetbuild:1 
+      - docker push umang2608/dotnetbuild:1
