--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,29 +4,10 @@ version: 0.2
 phases:
   install:
     commands:
-      - echo Entered the install phase...
-      - dotnet restore
-      - echo dotnet tool install --global dotnet-sonarscanner
-      
-    finally:
-      - echo This always runs even if the update or install command fails 
-  pre_build:
-    commands:
-      - echo Entered the pre_build phase...
-      - docker login -u "umang2608" -p "Umang@123"
-    finally:
-      - echo This always runs even if the login command fails
+      - npm install
   build:
     commands:
-      - echo Entered the build phase...
-      - echo Build started on `date`
-      - dotnet build
-    finally:
-      - echo This always runs even if the install command fails
-  post_build:
-    commands:
-      - echo Entered the post_build phase...
-      - dotnet publish -o ./PublishOutput
-      - docker build -t dotnetbuild:1 .
-      - docker tag dotnetbuild:1 umang2608/dotnetbuild:1 
-      - docker push umang2608/dotnetbuild:1
+      - npm test
+artifacts:
+  files:
+    - '**/*'
