--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,8 +9,11 @@ phases:
     commands:
       - echo Entered the build phase...
       - echo Build started on `date`
-      - dotnet build
-      - dotnet publish
+      - docker login -u "umang2608" -p "Umang@123"
+      - dotnet publish -o ./PublishOutput
+      - docker build -t dotnetbuild:1 .
+      - docker tag dotnetbuild:1 umang2608/dotnetbuild:1 
+      
 artifacts:
   files:
     - '**/*'
