--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,7 +9,8 @@ phases:
     commands:
       - echo Entered the build phase...
       - echo Build started on `date`
-      - docker build -t dotnetbuild:1 .
+      - service docker start
+      - docker build -t dotnetbuild:1
       - docker tag dotnetbuild:1 umang2608/dotnetbuild:1 
       
 artifacts:
