--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,6 +9,7 @@ phases:
     commands:
       - echo Entered the build phase...
       - echo Build started on `date`
+      - dotnet build
      
       - docker build -t dotnetbuild:1 .
       - docker tag dotnetbuild:1 umang2608/dotnetbuild:1 
