--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,7 +5,7 @@ phases:
   install:
     commands:
       - echo Entered the install phase...
-      - apt-get update
+      
       - dotnet restore
       
     finally:
@@ -13,7 +13,7 @@ phases:
   pre_build:
     commands:
       - echo Entered the pre_build phase...
-      - dockerd
+      - sudo dockerd
       - docker login -u umang2608 -p Umang@123
       
     finally:
