--- a/buildspec.yml
+++ b/buildspec.yml
@@ -29,5 +29,5 @@ phases:
       - echo Entered the post_build phase...
      
       - docker build -t dotnetbuild:1 .
-      - docker tag dotnetbuild:1 umang2608/dotnetbuild:1 
+      - docker tag dotnetbuild:1 169003570647.dkr.ecr.us-east-2.amazonaws.com/usa/codepipeline/webapp
       - docker push 169003570647.dkr.ecr.us-east-2.amazonaws.com/umang2608/dotnetbuild:1
