--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,16 +5,15 @@ phases:
   install:
     commands:
       - echo Entered the install phase...
-      
+     
       
     finally:
       - echo This always runs even if the update or install command fails 
   pre_build:
     commands:
       - echo Entered the pre_build phase...
-      
-      
-   finally:
+      - docker login -u umang2608 -p Umang@123
+    finally:
       - echo This always runs even if the login command fails
   build:
     commands:
@@ -23,11 +22,10 @@ phases:
       
     finally:
       - echo This always runs even if the install command fails
- post_build:
+  post_build:
     commands:
       - echo Entered the post_build phase...
-      
      
       - docker build -t dotnetbuild:1 .
-      - docker tag dotnetbuild:1 169003570647.dkr.ecr.us-east-2.amazonaws.com/usa/codepipeline/webapp
-      - docker push 169003570647.dkr.ecr.us-east-2.amazonaws.com/usa/codepipeline/webapp
+      - docker tag dotnetbuild:1 umang2608/dotnetbuild:1 
+      - docker push umang2608/dotnetbuild:1
